# zeno

./: .gitignore  LICENSE.md  README.md  build.zig  build.zig.zon
python/: PLAN.md
python/zeno/: main.py  pyproject.toml
python/zeno/tests/: test_art_nodes.py  test_art_tree.py  test_types.py
python/zeno/zeno/: __init__.py  constants.py  exceptions.py  types.py
python/zeno/zeno/art/: __init__.py  leaf.py  node.py  tree.py
src/: zeno-core.zig  zeno.zig
src/bench/: main.zig
src/core/: official.zig  public.zig  types.zig
src/core/engine/: batch.zig  db.zig  durability.zig  error.zig  expiration.zig  lifecycle.zig  metrics.zig  read.zig  scan.zig  write.zig
src/core/index/art/: node.zig  prepared_insert.zig  tree.zig
src/core/internal/: batch_plan.zig  mutate.zig  ttl_index.zig
src/core/runtime/: shard.zig  state.zig  visibility.zig
src/core/storage/: replay.zig  snapshot.zig  wal.zig
src/core/types/: batch.zig  checked_batch.zig  read_view.zig  scan.zig  value.zig
