[project]
name = "zeno"
version = "0.1.0"
description = "Zeno KV store - Python implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zeno"]
